# rtu-exam-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  exams.json  main.py  pyproject.toml
bot/: config.py  decode.py  lazy_logger.py  main.py
bot/data/: exams.json
