[tool.poetry]
name = "examsbot"
version = "0.1.0"
description = ""
authors = ["Slava Kuryaev <92830706+necrosskull@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.0"
python-telegram-bot = "13.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
